# oit_minibot_light_01_ros2

./: .gitignore  build.sh  get_suitable_ros2.sh  install.sh  install_launchers.sh  install_ydlidar.sh  package.xml  setup.cfg  setup.py
bags/: convert.sh  play_rosbag.sh  rosbag_record.sh
config/: X4.yaml  amcl.yaml  cartographer.lua  joy.yaml  nav2.yaml  roboclaw.yaml  slam_toolbox_localization.yaml  slam_toolbox_online.yaml
desktop/: oit_capture.desktop  oit_devices.desktop  oit_mapping.desktop  oit_navigation.desktop  oit_ros2_python3.desktop  oit_save_map.desktop  oit_stop_all.desktop  oit_teleop.desktop
launch/: amcl.launch.py  cartographer.launch.py  check_urdf.launch.py  csi_camera.launch.py  devices.launch.py  mapping.launch.py  navigation.launch.py  navigation_common.launch.py  play_rosbag.launch.py  record_rosbag.launch.py  remove_unused_imports.sh  roboclaw.launch.py  rviz.launch.py  stage.launch.py  stage_mapping.launch.py  stage_navigation.launch.py  stage_teleop.launch.py  teleop.launch.py  teleop_select.launch.py  ydlidar.launch.py
launcher/: devices.sh  docker.sh  save_map.sh  teleop.sh
maps/: 241_zemi.pgm  241_zemi.world  241_zemi.yaml  save_map.sh
maps/stage/: device.inc
oit_minibot_light_01_ros2/: capture.py  csi_camera.py  save_map.sh
rviz/: check_urdf.rviz  mapping.rviz  navigation.rviz  simple.rviz
shortcut/: capture.sh  copy_and_run_script.sh  devices.sh  docker.sh  mapping.sh  navigation.sh  run_script.sh  save_map.sh  stop_all.sh  teleop.sh
urdf/: minibot_light_01_gazebo.xacro
